second websocket is added
